<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficialAcitivy">

    <TextView
        android:id="@+id/current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9C27B0"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/official_img"
        android:layout_width="152dp"
        android:layout_height="155dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:onClick="openpictureact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <TextView
        android:id="@+id/office"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/party"
        android:layout_width="153dp"
        android:layout_height="32dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/office"
        app:layout_constraintTop_toBottomOf="@+id/office" />

    <TextView
        android:id="@+id/address_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/address_tag"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_button" />

    <TextView
        android:id="@+id/address"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="10dp"
        android:onClick="clickMap"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_tag" />

    <TextView
        android:id="@+id/phone_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Phone_tag"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/address_tag"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickCall"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/address"
        app:layout_constraintTop_toBottomOf="@+id/phone_tag" />

    <TextView
        android:id="@+id/email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_tag"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/phone_tag"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickEmail"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/phone"
        app:layout_constraintTop_toBottomOf="@+id/email_tag" />

    <TextView
        android:id="@+id/website_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Website_tag"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/email_tag"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="clickwebsite"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/website_tag" />

    <ImageButton
        android:id="@+id/facebook_button"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:onClick="clickFacebook"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="@+id/address_tag"
        app:layout_constraintTop_toBottomOf="@+id/party"
        app:srcCompat="@drawable/facebook"
        tools:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/youtube_button"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:onClick="youTubeClicked"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/facebook_button"
        app:layout_constraintStart_toEndOf="@+id/facebook_button"
        app:layout_constraintTop_toTopOf="@+id/facebook_button"
        app:srcCompat="@drawable/youtube" />

    <ImageButton
        android:id="@+id/twitter_button"
        style="@android:style/Widget.Holo.Light.ImageButton"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:onClick="clickTwitter"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/youtube_button"
        app:layout_constraintStart_toEndOf="@+id/youtube_button"
        app:layout_constraintTop_toTopOf="@+id/youtube_button"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/twitter" />

    <ImageView
        android:id="@+id/party_logo"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginTop="128dp"
        android:onClick="logowebsite"
        app:layout_constraintEnd_toEndOf="@+id/official_img"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/official_img"
        app:layout_constraintTop_toTopOf="@+id/official_img"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>